--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -15,7 +15,8 @@ $status-green: #12b76a;
 $status-orange: #f79009;
 
 //font-size
-$h1-font-size: 2.1875rem;
+$h1-font-size: 1.75rem;
+$tablet-h1-font-size: 2.1875rem;
 
 //screen sizes
 $tablet-breakpoint: 768px;
