--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,11 +1,18 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .login {
 	flex: 1;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	background-color: $primary-white;
-	padding: 5.3125rem 25rem;
+	padding: 0 $padding;
+
+	@include tablet {
+		padding: 0 $tablet-padding;
+	}
+	@include desktop {
+		padding: 0 $desktop-padding;
+	}
 }
