--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -1,7 +1,16 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .pageHeader {
 	border-bottom: $separator-border;
-	padding: 1.2rem $desktop-padding 0.6rem;
+	padding: 1.2rem $padding 0.6rem;
 	background-color: $primary-pink;
+
+	@include tablet {
+		padding: 1.2rem $tablet-padding 0.6rem;
+	}
+
+	@include desktop {
+		padding: 1.2rem $desktop-padding 0.6rem;
+	}
 }
