--- a/src/components/FilterItems/FilterItems.scss
+++ b/src/components/FilterItems/FilterItems.scss
@@ -1,48 +1,85 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .filter-card {
-	width: 20vw;
-	min-width: min-content;
+	border-bottom: 1.5px solid $secondary-grey;
 
-	&__name {
-		margin: 0;
-		font-family: "TBJMaltaMiniEdition";
-		text-transform: capitalize;
-		font-size: 1.5625rem;
-		font-weight: 600;
+	@include tablet {
+		width: 20vw;
+		min-width: min-content;
 	}
 
 	&__header {
 		display: flex;
 		justify-content: space-between;
-		border-bottom: 0.0938rem solid $secondary-grey;
-		padding: 1.25rem $desktop-padding;
+		padding: 1rem $padding;
 		gap: 5px;
+
+		@include tablet {
+			padding: 1.25rem $tablet-padding;
+		}
+
+		@include desktop {
+			padding: 1.25rem $desktop-padding;
+		}
 
 		&:hover {
 			cursor: pointer;
 		}
 	}
 
+	&__name {
+		font-family: "TBJMaltaMiniEdition";
+		text-transform: capitalize;
+		font-size: 1.375rem;
+		font-weight: 600;
+
+		@include tablet {
+			font-size: 1.5625rem;
+		}
+	}
+
 	&__icon {
-		width: 0.9375rem;
+		width: 0.8125rem;
+		transition: transform 0.5s ease;
+
+		@include tablet {
+			width: 0.9375rem;
+		}
+
+		&--flip {
+			transform: rotate(180deg);
+		}
 	}
 
 	&__list {
-		padding: 0 0 0 $desktop-padding;
+		padding: 0.625rem 0.625rem 1.25rem $padding;
 		list-style: none;
 		display: flex;
 		flex-flow: row wrap;
-		margin: 1.25rem 1.25rem 2.5rem 0;
-		gap: 1.25rem;
+		gap: 1rem;
+
+		@include tablet {
+			padding: 1.25rem 1.25rem 2.5rem $tablet-padding;
+		}
+
+		@include desktop {
+			padding-left: $desktop-padding;
+		}
 	}
 
 	&__list-item {
 		text-transform: capitalize;
 		border: $component-border;
-		padding: 0.125rem 0.625rem;
+		border-color: $secondary-pink;
+		padding: 0.125rem 0.5rem;
 		border-radius: 0.9375rem;
-		font-size: 0.9375rem;
+		font-size: 0.875rem;
+
+		@include tablet {
+			font-size: 0.9375rem;
+			padding: 0.125rem 0.625rem;
+		}
 
 		&:hover {
 			background-color: $secondary-pink;
