--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -1,4 +1,5 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .products {
 	flex: 1;
@@ -8,6 +9,12 @@
 	&-wrapper {
 		flex: 1;
 		display: flex;
+		flex-direction: column;
+		border-bottom: $separator-border;
+
+		@include tablet {
+			flex-direction: row;
+		}
 	}
 
 	&__error {
