--- a/src/components/Status/Status.scss
+++ b/src/components/Status/Status.scss
@@ -4,7 +4,7 @@
 	text-transform: capitalize;
 	display: flex;
 	align-items: center;
-	gap: 6px;
+	gap: 0.375rem;
 
 	&--red {
 		color: $status-red;
