--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -30,3 +30,6 @@ $desktop-padding: 3rem;
 //borders
 $separator-border: 1.5px solid $primary-black;
 $component-border: 0.5px solid $primary-black;
+
+//main navigation header
+$header-height: 3.9063rem;
