--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -7,55 +7,52 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1.6875rem 2.25rem;
-	gap: 1.125rem;
-	max-width: 14.0625rem;
-	height: 25.3125rem;
+	padding: 1.75rem;
+	width: 14.0625rem;
+	height: 25rem;
 
 	&:hover {
 		box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 1);
-	}
-
-	&__image {
-		margin-bottom: 0.9375rem;
-		width: 95%;
 	}
 
 	&__info-container {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		gap: 1rem;
+	}
+
+	&__image {
+		width: 85%;
 	}
 
 	&__info {
 		display: flex;
 		flex-direction: column;
 		gap: 5px;
+		width: 100%;
 	}
 
 	&__brand {
 		color: $secondary-ash;
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: uppercase;
-		align-self: flex-end;
+		text-align: right;
 		font-size: 1.375rem;
 		font-weight: 600;
-		max-height: 3.125rem;
 	}
 
 	&__brand,
 	&__name {
-		overflow: hidden;
 		display: -webkit-box;
-		-webkit-line-clamp: 2;
 		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 2;
+		overflow: hidden;
 	}
 
 	&__name {
 		font-weight: 400;
 		font-size: 0.875rem;
-		margin: 0;
-		max-height: 2.8125rem;
 	}
 
 	&__icon-wrapper {
