--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -1,13 +1,26 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .products__list {
-	display: flex;
-	flex-flow: row wrap;
-	gap: 2rem;
-	justify-content: space-between;
 	list-style: none;
-	margin: 0;
-	padding: 2.5rem $desktop-padding;
-	max-height: 90vh;
-	overflow-y: auto;
+	padding: $padding;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(14.0625rem, 1fr));
+	gap: 2rem;
+
+	@include tablet {
+		padding: 1.25rem $tablet-padding;
+		flex: 0.8;
+		max-height: 90vh;
+		overflow-y: auto;
+	}
+
+	@include desktop {
+		padding: 1.25rem $desktop-padding;
+	}
+}
+
+.products__item {
+	display: flex;
+	justify-content: center;
 }
