--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -18,10 +18,12 @@
 	}
 
 	&__error {
+		flex: 1;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin: 9.375rem auto 0;
+		justify-content: center;
+		gap: 1rem;
 
 		&-message {
 			text-align: center;
