Make main navigation header fixed positioned and adjust pages to accommodate for it

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -11,6 +11,14 @@
 		border-right: $separator-border;
 	}
 
+	&-wrapper {
+		@include tablet {
+			position: sticky;
+			top: $header-height;
+			will-change: transform;
+		}
+	}
+
 	&__reset {
 		border: 0;
 		background-color: transparent;
