--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .notFound {
-	flex: 1;
+	min-height: 100vh;
 	padding: 0 $padding;
 	display: flex;
 	justify-content: center;
