--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -2,12 +2,12 @@
 @use "../../styles/partials/mixins" as *;
 
 .signUp {
-	flex: 1;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background-color: $primary-white;
-	padding: $padding;
+	padding: 0 $padding;
 
 	@include tablet {
 		padding: 0 $tablet-padding;
