--- a/src/pages/AddProduct/AddProduct.scss
+++ b/src/pages/AddProduct/AddProduct.scss
@@ -2,10 +2,12 @@
 @use "../../styles/partials/mixins" as *;
 
 .addProduct {
-	padding-top: $header-height;
+	padding-top: $header-height; //accommodate for header
 	min-height: 100vh;
+	background-color: $primary-pink;
 
 	&__form-container {
+		background-color: $primary-white;
 		padding: 3.125rem 18.75rem;
 	}
 }
