--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -5,56 +5,58 @@
 	border-radius: 12.5rem;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
-	padding: 2.5rem;
-	overflow: hidden;
-	gap: 1.25rem;
-	max-width: 15.625rem;
+	padding: 3.125rem 1.75rem 1.75rem; //extra padding on top to accommodate the product image
+	width: 14.0625rem;
 	height: 25rem;
 
 	&:hover {
 		box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 1);
 	}
 
+	&__info-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+	}
+
 	&__image {
 		width: 95%;
-		margin-bottom: 0.9375rem;
 	}
 
 	&__info {
 		display: flex;
 		flex-direction: column;
 		gap: 5px;
+		width: 100%;
 	}
 
 	&__name {
 		font-weight: 400;
 		font-size: 0.875rem;
-		margin: 0;
-		max-height: 2.8125rem;
 	}
 
 	&__brand,
 	&__name {
-		overflow: hidden;
 		display: -webkit-box;
-		-webkit-line-clamp: 2;
 		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 2;
+		overflow: hidden;
 	}
 
 	&__brand {
 		color: $secondary-ash;
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: uppercase;
-		align-self: flex-end;
+		text-align: right;
 		font-size: 1.375rem;
 		font-weight: 600;
-		max-height: 3rem;
 	}
 
 	&__icon {
-		width: 1.5625rem;
+		width: 1.40625rem;
 
 		&:hover {
 			cursor: pointer;
