--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .homepage {
-	padding-top: $header-height;
+	padding-top: $header-height; //accommodate for header
 	min-height: 100vh;
 	background-color: $primary-pink;
 	display: flex;
