--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -5,6 +5,7 @@
 .notFound {
 	min-height: 100vh;
 	padding: 0 $padding;
+	background-color: $primary-white;
 	display: flex;
 	justify-content: center;
 	align-items: center;
