--- a/src/pages/ProductDetails/ProductDetails.scss
+++ b/src/pages/ProductDetails/ProductDetails.scss
@@ -2,10 +2,12 @@
 @use "../../styles/partials/mixins" as *;
 
 .product-details {
-	padding-top: $header-height;
+	padding-top: $header-height; //accommodate for header
 	min-height: 100vh;
+	background-color: $primary-pink;
 
 	&__container {
+		background-color: $primary-white;
 		padding: 3.125rem 12.5rem;
 	}
 }
