--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -3,7 +3,8 @@
 
 .products {
 	min-height: 100vh;
-	padding-top: $header-height;
+	padding-top: $header-height; //accommodate for header
+	background-color: $primary-pink;
 	display: flex;
 	flex-direction: column;
 
@@ -12,6 +13,7 @@
 		display: flex;
 		flex-direction: column;
 		border-bottom: $separator-border;
+		background-color: $primary-white;
 
 		@include tablet {
 			flex-direction: row;
