--- a/src/pages/Wishlist/Wishlist.scss
+++ b/src/pages/Wishlist/Wishlist.scss
@@ -1,20 +1,36 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .wishlist {
-	padding-top: $header-height;
+	padding-top: $header-height; //accommodate for header
 	min-height: 100vh;
+	background-color: $primary-pink;
 	display: flex;
 	flex-direction: column;
 
 	&-wrapper {
 		flex: 1;
+		background-color: $primary-white;
+		padding: 2rem $padding;
+
+		@include tablet {
+			padding: 4rem $tablet-padding;
+		}
+
+		@include desktop {
+			padding: 4rem $desktop-padding;
+		}
 	}
 
 	&__error {
+		flex: 1;
+		background-color: $primary-white;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin: 9.375rem auto 0;
+		justify-content: center;
+		gap: 1rem;
+		padding: $padding;
 
 		&-message {
 			text-align: center;
@@ -41,14 +57,14 @@
 	}
 
 	&__list {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: center;
 		list-style: none;
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(14.0625rem, 1fr));
 		gap: 2rem;
-		margin: 0;
-		padding: 2.5rem $desktop-padding;
-		max-height: 90vh;
-		overflow-y: auto;
+	}
+
+	&__item {
+		display: flex;
+		justify-content: center;
 	}
 }
