--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -10,6 +10,10 @@
 	padding: 0;
 }
 
+body {
+	background-color: $primary-pink;
+}
+
 h1 {
 	font-family: "TBJMaltaMiniEdition";
 	font-size: $h1-font-size;
