--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -1,24 +1,34 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .deleteModal {
 	position: fixed;
 	inset: 0;
+	z-index: 600;
 	background-color: rgba($primary-pink, 0.8);
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: $padding;
 
 	&-container {
 		background-color: $primary-white;
-		padding: 3.75rem 3.75rem 1.875rem;
-		width: 60vw;
+		padding: 3rem 2rem 1rem;
+		width: 80vw;
 		border: $separator-border;
 		position: relative;
+
+		@include tablet {
+			padding: 3.75rem 3.75rem 1.875rem;
+			width: 60vw;
+			max-width: 53.125rem;
+		}
 	}
 
 	&-content {
 		display: flex;
 		flex-direction: column;
+		gap: 0.5rem;
 	}
 
 	&__title {
@@ -26,7 +36,7 @@
 	}
 
 	&__button {
-		margin-top: 1.25rem;
+		margin-top: 1rem;
 		align-self: flex-end;
 		background-color: $primary-pink;
 		border: $component-border;
@@ -42,9 +52,15 @@
 
 	&__icon {
 		position: absolute;
-		width: 1.5625rem;
-		top: 1.5625rem;
-		right: 1.5625rem;
+		width: 1.25rem;
+		top: 1rem;
+		right: 1rem;
+
+		@include tablet {
+			width: 1.5625rem;
+			top: 1.5625rem;
+			right: 1.5625rem;
+		}
 
 		&:hover {
 			cursor: pointer;
