--- a/src/components/ProductForm/ProductForm.scss
+++ b/src/components/ProductForm/ProductForm.scss
@@ -1,22 +1,53 @@
 @use "../../styles/partials/typography";
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .form-container {
+	flex: 1;
+	background-color: $primary-white;
 	display: flex;
-	border: $separator-border;
+	justify-content: center;
+	align-items: center;
+	padding: 3.5rem $padding;
+
+	@include tablet {
+		padding: 3.5rem $tablet-padding;
+	}
+
+	.form-wrapper {
+		display: flex;
+		flex-direction: column;
+		border: $separator-border;
+		width: 100%;
+
+		@include tablet {
+			flex-direction: row;
+			max-width: 52.5rem;
+		}
+	}
 
 	.form__image-wrapper {
 		background-color: $primary-pink;
-		width: 3.875rem;
+		height: 3.875rem;
+		border-bottom: $separator-border;
+
+		@include tablet {
+			height: unset;
+			width: 3.875rem;
+			border-bottom: 0;
+			border-right: $separator-border;
+		}
 	}
 
 	.form {
 		display: flex;
 		flex-direction: column;
-		border-left: $separator-border;
-		padding: 4.0625rem 4.375rem 1.875rem;
-		position: relative;
-		flex: 1;
+		padding: 2.5rem 1.5rem;
+
+		@include tablet {
+			padding: 2.5rem 3rem 2rem;
+			flex: 1;
+		}
 
 		&--error {
 			color: $secondary-pink;
@@ -28,19 +59,23 @@
 
 		&__label {
 			font-family: "TBJMaltaMiniEdition";
-			font-size: 1.5625rem;
-			width: 7.8125rem;
+			font-size: 1.375rem;
+			font-weight: 600;
+			width: 4.6875rem;
 			text-transform: uppercase;
+
+			@media (min-width: 500px) {
+				width: 7.5rem;
+			}
+
+			@include tablet {
+				font-size: 1.5625rem;
+				width: 8.75rem;
+			}
 		}
 
 		&__icon {
 			width: 1.25rem;
-
-			&--cross {
-				position: absolute;
-				top: 1.25rem;
-				right: 1.25rem;
-			}
 
 			&:hover {
 				cursor: pointer;
@@ -49,22 +84,27 @@
 
 		&__input-container {
 			display: flex;
-			gap: 1.875rem;
-			margin-bottom: 2rem;
+			gap: 1rem;
+			margin-bottom: 1.5rem;
 			align-items: center;
+
+			@include tablet {
+				gap: 1.875rem;
+				margin-bottom: 1.75rem;
+			}
 		}
 
 		&__field-wrapper {
 			position: relative;
 			flex: 1;
-			display: flex;
 		}
 
 		&__field {
+			background-color: $primary-white;
 			border: 1.5px solid $secondary-grey;
 			border-radius: 1.875rem;
 			padding: 0.3rem 1rem;
-			flex: 1;
+			width: 100%;
 			font-size: 1rem;
 
 			&:active,
@@ -88,8 +128,13 @@
 			text-transform: capitalize;
 		}
 
-		&__button-container {
+		&__buttons {
+			display: flex;
+			gap: 1rem;
 			align-self: flex-end;
+		}
+
+		&__button-container {
 			display: flex;
 			align-items: center;
 
@@ -101,6 +146,7 @@
 		&__button {
 			border: none;
 			background-color: $primary-white;
+			font-size: 1rem;
 		}
 
 		&__button-content {
