Add responsive functionality to the Product Details page

--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -33,6 +33,12 @@
 
 	&__title {
 		text-transform: none;
+
+		span {
+			font-style: italic;
+			font-family: inherit;
+			font-size: inherit;
+		}
 	}
 
 	&__button {
