--- a/src/components/ProductInfo/ProductInfo.scss
+++ b/src/components/ProductInfo/ProductInfo.scss
@@ -1,32 +1,59 @@
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .productDetails {
 	border: $separator-border;
+	max-width: 31.25rem;
+
+	@include tablet {
+		max-width: 65rem;
+	}
 
 	&__header {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		background-color: $primary-pink;
 		border-bottom: $separator-border;
-		padding: 1rem 2rem;
+		padding: 0 1.5rem;
+		height: 3.875rem;
+
+		@include tablet {
+			padding: 0 2rem;
+		}
 	}
 
 	&-content {
-		padding: 2.5rem 2.5rem 1.5rem;
+		padding: 2.5rem 1.5rem;
 		display: flex;
 		flex-direction: column;
 		gap: 1.5rem;
+
+		@include tablet {
+			padding: 2.5rem 2.5rem 1.5rem;
+		}
 	}
 
 	&-container {
 		display: flex;
-		gap: 6.25rem;
+		flex-direction: column;
+		align-items: center;
+		gap: 2.5rem;
+
+		@include tablet {
+			flex-direction: row;
+			gap: 3rem;
+		}
+
+		@include desktop {
+			gap: 6.25rem;
+		}
 	}
 
 	&__info-container {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-around;
+		gap: 1rem;
 		flex: 1;
 	}
 
@@ -34,20 +61,29 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		gap: 2rem;
 		border-bottom: 1px solid $secondary-grey;
 		padding-bottom: 0.8rem;
+
+		@include tablet {
+			gap: 4rem;
+		}
+
+		@include tablet {
+			gap: 5rem;
+		}
 	}
 
 	&__title {
 		font-family: "TBJMaltaMiniEdition";
-		margin: 0;
 		text-transform: uppercase;
 		color: $secondary-ash;
-		font-size: 1.25rem;
+		font-size: 1.375rem;
 	}
 
 	&__description {
 		text-transform: capitalize;
+		text-align: right;
 
 		&--red {
 			color: $status-red;
@@ -64,9 +100,14 @@
 
 	&__image-wrapper {
 		display: flex;
-		padding: 5rem 2.5rem;
+		justify-content: center;
+		align-items: center;
+		padding: 4rem 2rem;
 		border-radius: 12.5rem;
-		overflow: hidden;
+
+		@include tablet {
+			padding: 5rem 2.5rem;
+		}
 
 		&--red {
 			border: 1.5px solid $status-red;
@@ -82,8 +123,11 @@
 	}
 
 	&__image {
-		width: 12.5rem;
-		align-self: center;
+		width: 9.375rem;
+
+		@include tablet {
+			width: 12.5rem;
+		}
 	}
 
 	&__icon {
@@ -94,7 +138,7 @@
 		align-self: flex-end;
 		display: flex;
 		align-items: center;
-		gap: 2.5rem;
+		gap: 2rem;
 	}
 
 	&__wishlist {
